[tool.poetry]
name = "neox"
version = "0.1.0"
description = "An Multi-Modality Foundation Model for Humanoid robots"
authors = ["Kye Gomez <kye@apac.ai>"]
license = "Attribution-NonCommercial 4.0 International"
readme = "README.md"
homepage = "https://github.com/kyegomez/NeoCortex"
repository = "https://github.com/kyegomez/NeoCortex"

[tool.poetry.dependencies]
python = "^3.6"
torch = "*"
einops = "*"
transformers = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
